--- a/src/components/calculator.css
+++ b/src/components/calculator.css
@@ -1,6 +1,61 @@
-.calculatorFrom{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+.calculatorFrom {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #fff;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 14px;
+  padding-bottom: 20px;
+  width: 320px;
+}
+
+.display {
+  width: 100%;
+  height: 60px;
+  padding: 40px 0;
+  background: #ff0509;
+  border-top-left-radius: 14px;
+  border-top-right-radius: 14px;
+}
+
+table {
+  padding: 20px 20px 20px 20px;
+}
+
+tr {
+  width: 280px;
+  float: left;
+}
+
+button {
+  width: 60px;
+  height: 60px;
+  padding: 0;
+  margin: 5px;
+  box-sizing: border-box;
+  background: #d7e1f5;
+  border: solid 1px #7c7979;
+  font-size: 30px;
+  line-height: 30px;
+  border-radius: 40%;
+  font-weight: 700;
+  color: #ff0509;
+  cursor: pointer;
+}
+
+.displayResult {
+  width: 270px;
+  height: 60px;
+  float: left;
+  padding: 0;
+  box-sizing: border-box;
+  border: none;
+  background: none;
+  color: #ffffff;
+  text-align: right;
+  font-weight: 700;
+  font-size: 60px;
+  line-height: 60px;
+  margin: 0 25px;
 }
